    <?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/textView1"
            android:textStyle="bold"
            android:textSize="20dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="40dp"
            android:hint="@string/email"
            android:background="#DDDD"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:hint="@string/matKhau"
            android:background="#DDDD"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:hint="@string/cfMatKhau"
            android:background="#DDDD"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:hint="@string/ho"
            android:background="#DDDD"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:hint="@string/ten"
            android:background="#DDDD"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:hint="@string/chungMinhThu"
            android:background="#DDDD"
            />
        android:layout_width=""
        android:layout_height="" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/ngay"
                android:background="#DDDD"
                />
            <EditText
                android:layout_width="100dp"
                android:layout_marginLeft="25dp"
                android:layout_height="wrap_content"
                android:text="@string/thang"
                android:background="#DDDD"
                />
            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:text="@string/nam"
                android:background="#DDDD"
                />
        </LinearLayout>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/kiemTra"
            android:textStyle="bold"/>
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="#4C6BA4"
            android:text="@string/tiep"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="15dp"/>
    </LinearLayout>