<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">
    <TextView
        android:id="@+id/ppCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ppCount"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/Tao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/ppCount"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="40dp"
        android:text="@string/tao"
        android:textStyle="bold"
        android:textSize="35dp"
        android:textColor="000000"/>
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pp"
        android:layout_alignTop="@id/Tao"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>
    <CheckBox
        android:id="@+id/cb1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBox1"
        android:layout_alignTop="@id/textView"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="110dp"
        android:textStyle="bold"/>

    <CheckBox
        android:id="@+id/cb2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/cb1"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="30dp"
        android:text="@string/checkBox2"
        />
    <CheckBox
        android:id="@+id/cb3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBox3"
        android:layout_alignTop="@id/cb2"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="110dp"
        />
    <CheckBox
        android:id="@+id/cb4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBox4"
        android:layout_alignTop="@id/cb3"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="110dp"
        />
    <Button
        android:id="@+id/bt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4C6BA4"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/button1"
        android:layout_alignTop="@id/cb4"
        android:layout_marginTop="60dp"
        android:textColor="#fff"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/bt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/button2"
        android:layout_alignTop="@id/bt1"
        android:layout_marginTop="60dp"
        android:textColor="#000"
        android:textStyle="bold"/>
</RelativeLayout>