<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#fff"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:text="@string/proptitPay"
            android:textColor="#003300"
            android:textSize="30dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"/>
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="#fff"
            android:background="#DDDD"
            android:hint="@string/email"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="#fff"
            android:background="#DDDD"
            android:layout_marginTop="10dp"
            android:hint="@string/passWord"/>
        <Button
            android:id="@+id/idLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/logIn"
            android:textColor="#fff"
            android:textStyle="bold"
            android:background="#4C6BA4"/>

    </LinearLayout>
    <Button
        android:id="@+id/Sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textColor="#4C6BA4"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:text="@string/Sign_up"
        ></Button>

</RelativeLayout>